# techdesktop-settings

./: Cargo.toml  deny.toml  justfile
data/: com.system76.CosmicSettings.desktop
debian/: changelog  control  copyright  rules
scss/: title.scss  window.scss
src/: main.rs  ui.rs  widgets.rs
src/sections/: about.rs  desktop.rs  keyboard.rs  wifi.rs
src/sections/desktop/: dock.rs  workspaces.rs
src/sections/wifi/: saved_networks.rs  visible_networks.rs
src/ui/: nav.rs  section.rs
src/widgets/: selection_row.rs
