[package]
name = "cosmic-settings"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0.55"
bytesize = "1.1.0"
cascade = "1.0.0"
cosmic-dbus-networkmanager = { git = "https://github.com/pop-os/dbus-settings-bindings" }
futures = "0.3.21"
futures-util = "0.3.21"
fuzzy-matcher = "0.3.7"
gtk4 = { version = "0.4.6", features = ["v4_4"] }
itertools = "0.10.3"
libcosmic-widgets = { git = "https://github.com/pop-os/libcosmic", branch = "lucy/widgets" }
once_cell = "1.9.0"
os-release = "0.1.0"
relm4-macros = "0.4.2"
slotmap = "1.0.6"
sysinfo = "0.23.5"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
zbus = "2.1.1"
zvariant = "3.1.2"

[build-dependencies]
grass = "0.10.8"
